The diff basically remembers the old focuslistener and then unregisters it after the new one is registered. The listener is deconstructed and it is still registered as a listener, so in some cases a blur event goes to the old listener that is why it crashes. Bug 132672 r=dcone sr=jst adt=putterman a=jud