mozilla/content/base/src/nsDocumentViewer.cpp
@@ -1338,6 +1338,9 @@ DocumentViewerImpl::InitInternal(nsIWidget* aParentWidget,
   rv = selPrivate->AddSelectionListener(mSelectionListener);
   if (NS_FAILED(rv)) return rv;
   
+  // Save old listener so we can unregister it
+  nsCOMPtr<nsIDOMFocusListener> mOldFocusListener = mFocusListener;
+
   //focus listener
   // now register ourselves as a focus listener, so that we get called
   // when the focus changes in the window
@@ -1365,6 +1368,11 @@ DocumentViewerImpl::InitInternal(nsIWidget* aParentWidget,
 
     rv = erP->AddEventListenerByIID(mFocusListener, NS_GET_IID(nsIDOMFocusListener));
     NS_ASSERTION(NS_SUCCEEDED(rv), "failed to register focus listener");
+    if (mOldFocusListener) {
+      rv = erP->RemoveEventListenerByIID(mOldFocusListener,
+                                      NS_GET_IID(nsIDOMFocusListener));
+      NS_ASSERTION(NS_SUCCEEDED(rv), "failed to remove focus listener");
+    }
   }
 
   return rv;
@@ -1546,6 +1554,7 @@ DocumentViewerImpl::Destroy()
 
   if (mPrt) {
     delete mPrt;
+    PRINT_DEBUG_MSG1("NS_ERROR_FAILURE - CheckForPrinters for Printers failed");
     mPrt = nsnull;
   }
 
@@ -2865,9 +2874,8 @@ DocumentViewerImpl::PrintPage(nsIPresContext*   aPresContext,
     } // while
     mPageSeqFrame = curPageSeq;
 
-    if ((aPO->mParent == nsnull ||
-         (aPO->mParent != nsnull && !aPO->mParent->mPrintAsIs && aPO->mPrintAsIs)) &&
-         !isDoingPrintRange) {
+    if (aPO->mParent == nsnull ||
+         (aPO->mParent != nsnull && !aPO->mParent->mPrintAsIs && aPO->mPrintAsIs)) {
       mPageSeqFrame->DoPageEnd(aPresContext);
     }
 
@@ -5938,6 +5946,7 @@ DocumentViewerImpl::PrintPreview(nsIPrintSettings* aPrintSettings)
 
   mPrt = new PrintData();
   if (mPrt == nsnull) {
+    PRINT_DEBUG_MSG1("NS_ERROR_OUT_OF_MEMORY - Creating PrintData");
     mIsCreatingPrintPreview = PR_FALSE;
     return NS_ERROR_OUT_OF_MEMORY;
   }
@@ -5982,6 +5991,7 @@ DocumentViewerImpl::PrintPreview(nsIPrintSettings* aPrintSettings)
     if (NS_FAILED(CheckForPrinters(mPrt->mPrintOptions, mPrt->mPrintSettings, NS_ERROR_GFX_PRINTER_PRINTPREVIEW, PR_FALSE))) {
       delete mPrt;
       mPrt = nsnull;
+      PRINT_DEBUG_MSG1("NS_ERROR_FAILURE - CheckForPrinters failed");
       return NS_ERROR_FAILURE;
     }
   }
@@ -6347,6 +6357,7 @@ DocumentViewerImpl::Print(nsIPrintSettings*       aPrintSettings,
   
   mPrt = new PrintData();
   if (mPrt == nsnull) {
+    PRINT_DEBUG_MSG1("NS_ERROR_OUT_OF_MEMORY - Creating PrintData");
     return NS_ERROR_OUT_OF_MEMORY;
   }
 
@@ -6365,6 +6376,7 @@ DocumentViewerImpl::Print(nsIPrintSettings*       aPrintSettings,
     if (NS_FAILED(CheckForPrinters(mPrt->mPrintOptions, mPrt->mPrintSettings, NS_ERROR_GFX_PRINTER_NO_PRINTER_AVAILABLE, PR_TRUE))) {
       delete mPrt;
       mPrt = nsnull;
+      PRINT_DEBUG_MSG1("NS_ERROR_FAILURE - CheckForPrinters failed");
       return NS_ERROR_FAILURE;
     }
   }
@@ -6399,6 +6411,7 @@ DocumentViewerImpl::Print(nsIPrintSettings*       aPrintSettings,
       mIsDoingPrinting = PR_FALSE;
       delete mPrt;
       mPrt = nsnull;
+      PRINT_DEBUG_MSG1("NS_ERROR_FAILURE - Couldn't create mPrintDocList");
       return NS_ERROR_FAILURE;
     }
   } else {
@@ -6503,6 +6516,7 @@ DocumentViewerImpl::Print(nsIPrintSettings*       aPrintSettings,
       if (rv != NS_ERROR_ABORT) {
         ShowPrintErrorDialog(NS_ERROR_GFX_PRINTER_DOC_WAS_DESTORYED);
       }
+      PRINT_DEBUG_MSG2("**** mDocWasToBeDestroyed - %s", rv != NS_ERROR_ABORT?"NS_ERROR_GFX_PRINTER_DOC_WAS_DESTORYED":"NS_ERROR_ABORT");
       return NS_ERROR_ABORT;
     }
 
@@ -6709,6 +6723,7 @@ DocumentViewerImpl::Print(nsIPrintSettings*       aPrintSettings,
     if (rv != NS_ERROR_ABORT) {
       ShowPrintErrorDialog(rv);
     }
+    PRINT_DEBUG_MSG2("**** Printing Failed - rv 0x%X", rv);
   }
       
   return rv;
